human_written_tests/WebAssembly/processed_control_flow_validation/test_call_18.wast
(assert_invalid
  (module (func $large-func (call 1012321300)))
  "unknown function"
)